<resources>
    <string name="app_name">QuizZiacs2</string>
    <string name="userName">What is your name?</string>
    <string name="question_1">Who was announced King after the death of King Robert Baratheon?</string>
    <string name="jeoffery">Jeoffery Lannister</string>
    <string name="dany">Daenerys Targaryen</string>
    <string name="jon">Jon Snow</string>
    <string name="sansa">Sansa Stark</string>
    <string name="jamie">Jamie Lannister</string>
    <string name="dragoo">Khal Dragoo</string>
    <string name="question_1_text">Question #1</string>
    <string name="welcome">Enter Westeros when ready....</string>
    <string name="ready">Ready</string>
    <string name="question_2_text">Question #2</string>
    <string name="question_3_text">Question #3</string>
    <string name="question_4_text">Question #4</string>
    <string name="question_5_text">Question #5</string>
    <string name="question_2_question">Who defeated "The Mountain?"</string>
    <string name="question_4_question">Who killed the "Mad King?"</string>
    <string name="question_5_question">Which of these are the Khaleesis Dragons?</string>
    <string name="Rob">Rob Stark</string>
    <string name="Stannis">Stannis Baratheon</string>
    <string name="tyrion">Tyrion Lannister</string>
    <string name="oberyn">Oberyn Martell</string>
    <string name="theon">Theon Greyjoy</string>
    <string name="tywin">Tywin Lannister</string>
    <string name="selmy">Sir Barristan Selmy</string>
    <string name="hound">Sir Sandor Clegane</string>
    <string name="mountain">Sir Gregor Clegane</string>
    <string name="question_3_question">Who is "The Hound?"</string>
    <string name="ned">Ned Stark</string>
    <string name="robert">Robert Baratheon</string>
    <string name="title_activity_results">results</string>
    <string name="restart">Restart</string>
    <string name="next_button_text">NEXT</string>
    <string name="q_5_answer">First and Last Name</string>
    <string name="results_button_text">Submit Answers</string>
    <string name="question_6_text">Extra Point</string>
    <string name="question_6_question">Where does Game Of Thrones take place in?</string>
    <string name="question_6_hint">Where?</string>
    <string name="free_button">Check</string>
    <string name="freeAnswer">Westeros</string>
    <string name="dragon1">Drogon</string>
    <string name="dragon2">Rhaegal</string>
    <string name="dragon3">Viserion</string>
    <string name="smaug">Smaug</string>

</resources>
